# rustifact

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
examples/array4d/: Cargo.toml  build.rs
examples/array4d/src/: main.rs
examples/city_data/: Cargo.toml  build.rs
examples/city_data/src/: main.rs
examples/coords/: Cargo.toml  build.rs
examples/coords/data/: Cargo.toml
examples/coords/data/src/: lib.rs
examples/coords/src/: main.rs
examples/html_tags/: Cargo.toml  build.rs
examples/html_tags/src/: main.rs
examples/map/: Cargo.toml  build.rs
examples/map/data/src/: lib.rs
examples/map/src/: main.rs
examples/out_type/: build.rs
examples/out_type/data/src/: lib.rs
examples/out_type/src/: main.rs
src/: lib.rs  phf.rs  tokens.rs
src/phf/: map.rs  ordered_map.rs  ordered_set.rs  set.rs
test/: Cargo.toml  basic.test  map.test  map_ordered.test  set.test  set_ordered.test
test/derive/: struct_named_1.test  struct_named_2.test
test/src/: main.rs
