[package]
name = "rustifact"
version = "0.7.0"
edition = "2021"
description = "A seamless bridge between a build script and the main crate."
license = "MPL-2.0"
repository = "https://github.com/mbaulch/rustifact"

[dependencies]
rustifact_derive = "0.2.0"
quote = "1.0.29"
prettyplease = "0.2.9"
syn = { version = "2.0.22", features = ["parsing"] }
proc-macro2 = "1.0.63"
