[package]
name = "map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
rustifact = { path = "../../", features = ["map"] }
data = { path = "data" }

[dependencies]
rustifact = { path = "../../", features = ["map"] }
data = { path = "data" }
